<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/actualPersonFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="default"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/personFirstNameConstant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#E91E63" />

        <TextView
            android:id="@+id/actualPersonLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="default"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/personLastNameConstant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#E91E63" />

        <TextView
            android:id="@+id/actualPersonGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="default"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/personGenderConstant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#E91E63" />

        <ExpandableListView
            android:id="@+id/expandableLifeEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="0.5dp"
            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft">

        </ExpandableListView>
    </LinearLayout>
</ScrollView>